{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 1,
  "lineage": "a2b78e4e-2d9d-3048-9e50-c11dbad66d57",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fa4afc89e4a8a09",
            "arn": "arn:aws:ec2:ap-south-1:323568642936:instance/i-06553bef841e8aaca",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06553bef841e8aaca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Devops-mumbai",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07e0a27bfd9542215",
            "private_dns": "ip-172-31-33-153.ap-south-1.compute.internal",
            "private_ip": "172.31.33.153",
            "public_dns": "ec2-65-0-29-175.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.29.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-073dbac7698c70d03",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "remote",
              "webserver"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02eeb876f0a247774",
            "tags": {
              "Name": "zomato-application",
              "project": "zomato"
            },
            "tags_all": {
              "Name": "zomato-application",
              "project": "zomato"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00855494a7ee58dc3",
              "sg-00bf98e1b750b775f"
            ]
          },
          "dependencies": [
            "aws_security_group.remote",
            "aws_security_group.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "remote",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:323568642936:security-group/sg-00bf98e1b750b775f",
            "description": "allow 22 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bf98e1b750b775f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "remote",
            "name_prefix": "",
            "owner_id": "323568642936",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "remote",
              "project": "uber"
            },
            "tags_all": {
              "Name": "remote",
              "project": "uber"
            },
            "timeouts": null,
            "vpc_id": "vpc-0764bc5f0386081c8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:323568642936:security-group/sg-00855494a7ee58dc3",
            "description": "allows 80,443 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00855494a7ee58dc3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver",
            "name_prefix": "",
            "owner_id": "323568642936",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-zomato",
              "project": "zomato"
            },
            "tags_all": {
              "Name": "webserver-zomato",
              "project": "zomato"
            },
            "timeouts": null,
            "vpc_id": "vpc-0764bc5f0386081c8"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}